@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-02-07  Michael Jahn
+	* CineMovies movie plugin updated
+
 2009-02-05  Michael Jahn
 	* AniDB movie plugin updated
 
